--- a/content/projects/bkarthik.pro.mdx
+++ b/content/projects/bkarthik.pro.mdx
@@ -1,6 +1,6 @@
 ---
 title: bkarthik.pro
-description: I guess it's never to late to start
+description: I guess it's never too late to start
 repository: karthikbokkesam/bkarthik.pro
 url: https://bkarthik.pro
 date: 2024-04-14
@@ -66,6 +66,7 @@ few updates to the code base. Learnt about
 - *Deployment with [vercel](https://vercel.com)* this site is hosted on vercel.
 - [remote caching with turbo repo](https://vercel.com/docs/monorepos/remote-caching#enable-and-disable-remote-caching-for-your-team) aslo a good read, if you are interested in 
 better build time for your nextJs projects.
+- Adding MX and A records to AWS route 53 to add support for email and prove ownership of domain via DNS
 
 [![remote caching](/remote-caching.png)](https://vercel.com/solutions/turborepo)
 
